@@ -8,6 +8,8 @@ much, much easier.
 * Stylesheet URL is now absolute based on root_url in config.php
 * Fixed bug with content type changes breaking hierarchy (#000090)
 * Fixed bug with start_element in bulletmenu and phplayers
+* Fixed bug with css table not having sequence setup correctly (#000093)
+* Fixed contact form so that it's xhtml compliant (#000096)
 
 Version 0.8.2 "Taunoa" -- Mon Jan 17 2005
 -----------------
